# phosphor-eda

./: .envrc  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.depot/actions/setup-python/: action.yml
.depot/workflows/: ci.yml
.github/scripts/: verify-release-tag-on-main.sh
.github/workflows/: publish.yml
skills/phosphor-eda/: SKILL.md
skills/phosphor-eda/agents/: openai.yaml
src/phosphor_eda/: __init__.py  classify.py  cli.py  cli_project.py  convert.py  diagnostics.py  models.py  pcb.py  pcb_annotations.py  pcb_builder.py  pcb_render.py  pcb_render_artwork.py  pcb_render_drills.py  pcb_render_geometry.py  pcb_render_inventory.py  pcb_render_modes.py  pcb_render_plan.py  pcb_render_primitives.py  pcb_render_profile.py  pcb_render_settings.py  pcb_render_skia.py  pcb_render_tokens.py  project.py  resolved_graph.py  schematic.py  selector_match.py  serialize.py  shapely_geometry.py  skill.md  text.py  text_metrics.py  text_outlines.py  trace.py  validate.py
src/phosphor_eda/altium/: __init__.py  _helpers.py  enums.py  errors.py  netlist.py  parser.py  pcb_parser.py  pcb_records.py  project.py  record_factory.py  record_parser.py  records.py  resolver.py  sheet_builder.py  source.py  spatial.py  to_schematic.py
src/phosphor_eda/domain/: __init__.py  arc_geometry.py  buses.py  pcb.py  pcb_builder.py  project.py  schematic.py  variant_materializer.py  variants.py
src/phosphor_eda/dsn/: __init__.py  binary_reader.py  models.py  netlist.py  parser.py  resolver.py  source.py  to_schematic.py
src/phosphor_eda/eagle/: __init__.py  to_schematic.py
src/phosphor_eda/fonts/: __init__.py
src/phosphor_eda/formats/: __init__.py
src/phosphor_eda/geometry/: __init__.py  pcb_geometry.py  shapely_ops.py  text_metrics.py  text_outlines.py
src/phosphor_eda/kicad/: __init__.py  dru_parser.py  lib_symbols.py  (+10 more)
tests/: allegro_oracle_helpers.py  conftest.py  dsn_oracle_helpers.py  fixture_paths.py  package_smoke.py  pcb_layer_helpers.py  test_allegro_binary.py  test_allegro_constraints.py  test_allegro_copper.py  test_allegro_core_board.py  test_allegro_diagnostics_budget.py  test_allegro_drill_oracle.py  test_allegro_external_corpus.py  test_allegro_fixture_inventory.py  test_allegro_graph.py  test_allegro_graphics.py  test_allegro_inventory.py  test_allegro_ipc356_oracle.py  test_allegro_kicad_conversion_oracle.py  test_allegro_layers.py  test_allegro_packaged_netlist_oracle.py  test_allegro_padstacks.py  test_allegro_pours_keepouts.py  test_allegro_public_loader.py  test_allegro_records.py  test_allegro_shared_graph.py  test_allegro_sidecars.py  test_altium_annotation.py  test_altium_board_polygon_dedupe.py  test_altium_enrichment.py  test_altium_enums.py  test_altium_error_handling.py  test_altium_errors.py  test_altium_harness.py  test_altium_helpers.py  test_altium_multi_sheet.py  test_altium_net_naming.py  test_altium_net_naming_conformance.py  test_altium_net_scope_fixtures.py  test_altium_netlist.py  (+101 more)
tests/fixtures/: kicad_padstacks.kicad_pcb  kicad_v10_nets.kicad_pcb  sql_schema_snapshot.json
tests/goldens/: opencellular-breakout.design.front.manifest.json  pi-mx8.design.front.manifest.json  sql_behavior_lock.json
typings/olefile/: __init__.pyi
typings/sexpdata/: __init__.pyi
(+208 files in other folders)
