[project]
name = "phosphor-eda"
version = "0.2.0rc12"
description = "Electronic CAD file processing utilities"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "duckdb>=1.0",
    "fonttools>=4.50",
    "numpy>=2.4",
    "olefile>=0.47",
    "ortools>=9.9",
    "pandas>=3.0",
    "sexpdata>=1.0",
    "shapely>=2.0",
]

[project.scripts]
phosphor-eda = "phosphor_eda.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phosphor_eda"]

[tool.pytest.ini_options]
norecursedirs = ["upstream"]
markers = [
    "corpus: optional local-corpus tests; run with --run-corpus or PHOSPHOR_RUN_CORPUS=1",
    "allegro_corpus: optional local Allegro corpus tests; run with --run-allegro-corpus, --run-corpus, PHOSPHOR_RUN_ALLEGRO_CORPUS=1, or PHOSPHOR_RUN_CORPUS=1",
    "allegro_external_oracle: optional Allegro external-tool oracle tests; run with PHOSPHOR_RUN_ALLEGRO_EXTERNAL_ORACLES=1",
    "behavior_lock: slow full-project output lock tests; run with --run-behavior-locks or PHOSPHOR_RUN_BEHAVIOR_LOCKS=1",
    "kicad_cli: exercises the locally installed kicad-cli oracle; skipped when it is absent",
]
