[project]
name = "phosphor-eda"
version = "0.2.0rc12"
description = "Electronic CAD file processing utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "duckdb>=1.0",
    "fonttools>=4.50",
    "numpy>=2.4",
    "olefile>=0.47",
    "ortools>=9.9",
    "pandas>=3.0",
    "sexpdata>=1.0",
    "shapely>=2.0",
]

[project.scripts]
phosphor-eda = "phosphor_eda.cli:main"

[project.urls]
Repository = "https://github.com/phosphor-tools/phosphor-eda"
Issues = "https://github.com/phosphor-tools/phosphor-eda/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.0.2",
    "ruff>=0.11.0",
    "twine>=6.2.0",
    "uv-secure>=0.6.0",
]

[tool.hatch.build]
exclude = ["/tests/upstream"]

[tool.hatch.build.targets.wheel]
packages = ["src/phosphor_eda"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["upstream"]
filterwarnings = ["error"]
markers = [
    "corpus: optional local-corpus tests; run with --run-corpus or PHOSPHOR_RUN_CORPUS=1",
    "allegro_corpus: optional local Allegro corpus tests; run with --run-allegro-corpus, --run-corpus, PHOSPHOR_RUN_ALLEGRO_CORPUS=1, or PHOSPHOR_RUN_CORPUS=1",
    "allegro_external_oracle: optional Allegro external-tool oracle tests; run with PHOSPHOR_RUN_ALLEGRO_EXTERNAL_ORACLES=1",
    "behavior_lock: slow full-project output lock tests; run with --run-behavior-locks or PHOSPHOR_RUN_BEHAVIOR_LOCKS=1",
    "kicad_cli: exercises the locally installed kicad-cli oracle; skipped when it is absent",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["tests/upstream"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["phosphor_eda"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
stubPath = "typings"
include = ["src"]
exclude = ["tests/upstream"]
